# veloserve-ai

./: .env.example  .gitignore  README.md  pyproject.toml
crews/_shared/: runner.py
crews/community_crew/: crew.py
crews/community_crew/config/: agents.yaml  context.yaml  tasks.yaml
crews/licensing_crew/: crew.py
crews/licensing_crew/config/: agents.yaml  context.yaml  tasks.yaml
crews/platform_crew/: crew.py
crews/platform_crew/config/: agents.yaml  context.yaml  presets.yaml  tasks.yaml
crews/product_orchestrator_crew/: crew.py
crews/product_orchestrator_crew/config/: agents.yaml  context.yaml  tasks.yaml
crews/shared_qa_security_crew/: crew.py
crews/shared_qa_security_crew/config/: agents.yaml  context.yaml  tasks.yaml
crews/velopanel_crew/: crew.py
crews/velopanel_crew/config/: agents.yaml  context.yaml  presets.yaml  tasks.yaml
crews/veloserve_product_crew/: crew.py
crews/veloserve_product_crew/config/: agents.yaml  context.yaml  tasks.yaml
crews/veloserve_server_crew/: crew.py
crews/veloserve_server_crew/config/: agents.yaml  context.yaml  tasks.yaml
knowledge/architecture/: crew_routing.md  repo_map.md  subdomains.md
knowledge/company/: VEL0SERVE_CONTEXT.md  veloserve_context.md
knowledge/repos/: repos_inventory.md
runbooks/: crew_operating_model.md  prepare_qa_strategy.md
scripts/: inventory_repos.sh  prepare-qa.sh  run_crew.py
src/veloserve_ai_amp/: __init__.py  context.py  crew.py  inputs.py  main.py  repo_context.py
src/veloserve_ai_amp/config/: agents.yaml  tasks.yaml
tests/: test_amp_inputs.py
